--- a/A03_SOMA_CODINGTEST/B_16_20/C20_D-11_260224.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C20_D-11_260224.ipynb
@@ -2,26 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 14719 (빗물) - https://www.acmicpc.net/problem/14719\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 8\n",
+    "3 1 2 3 4 1 1 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    H, W = map(int, input().split())\n",
+    "    heights = list(map(int, input().split()))\n",
     "\n",
-    "    pass\n",
+    "    left, right = 0, W - 1\n",
+    "\n",
+    "    left_max = heights[left]\n",
+    "    right_max = heights[right]\n",
+    "\n",
+    "    water = 0\n",
+    "    while left < right:\n",
+    "\n",
+    "        if left_max < right_max:\n",
+    "            left += 1\n",
+    "            left_max = max(left_max, heights[left])\n",
+    "            water += left_max - heights[left]\n",
+    "\n",
+    "        else:\n",
+    "            right -= 1\n",
+    "            right_max = max(right_max, heights[right])\n",
+    "            water += right_max - heights[right]\n",
+    "\n",
+    "    print(water)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -78,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "be7d35ea",
    "metadata": {},
    "outputs": [
@@ -116,21 +145,26 @@
     "def solve():\n",
     "\n",
     "    def d_find(str_len):\n",
+    "\n",
     "        for length in range(2, str_len + 1):\n",
     "            d_pair = set()\n",
+    "\n",
     "            for start in range(0, str_len - length + 1):\n",
     "                end = start + length - 1\n",
     "                temp = string[start] + string[end]\n",
+    "\n",
     "                if temp not in d_pair:\n",
     "                    d_pair.add(temp)\n",
     "                else:\n",
     "                    return False\n",
+    "        \n",
     "        return True\n",
     "\n",
     "    while True:\n",
     "        string = input().rstrip()\n",
     "        if string == '*':\n",
     "            break\n",
+    "        \n",
     "        str_len = len(string)\n",
     "\n",
     "        if d_find(str_len):\n",
@@ -144,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9ab6f72b",
    "metadata": {},
    "outputs": [
@@ -172,13 +206,11 @@
     "\n",
     "    for char in ppap:\n",
     "        stack.append(char)\n",
+    "        \n",
     "        if len(stack) >= 4 and stack[-4:] == ['P', 'P', 'A', 'P']:\n",
     "            del stack[-3:]\n",
     "\n",
-    "    if stack == ['P']:\n",
-    "        print('PPAP')\n",
-    "    else:\n",
-    "        print('NP')\n",
+    "    print('PPAP') if stack == ['P'] else print('NP')\n",
     "\n",
     "\n",
     "solve()"
@@ -212,23 +244,100 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 17837 (새로운 게임 2) - https://www.acmicpc.net/problem/17837\n",
+    "# https://www.youtube.com/@sejongclass (코드 짠 사람)\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6 10\n",
+    "0 1 2 0 1 1\n",
+    "1 2 0 1 1 0\n",
+    "2 1 0 1 1 0\n",
+    "1 0 1 1 0 2\n",
+    "2 0 1 2 0 1\n",
+    "0 2 1 0 2 1\n",
+    "1 1 1\n",
+    "2 2 2\n",
+    "3 3 4\n",
+    "4 4 1\n",
+    "5 5 3\n",
+    "6 6 2\n",
+    "1 6 3\n",
+    "6 1 2\n",
+    "2 4 3\n",
+    "4 2 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, K = map(int, input().split())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    directions = [(0, +1), (0, -1), (-1, 0), (+1, 0)]  # 우(0), 좌(1), 상(2), 하(3)\n",
+    "    rev_dir = [1, 0, 3, 2]      # 반대 방향\n",
+    "\n",
+    "    horses = list()\n",
+    "    states = [[[] for _ in range(N)] for _ in range(N)]  # 각 좌표마다 스텍\n",
+    "\n",
+    "    for i in range(K):\n",
+    "        r, c, dir = map(lambda x: int(x) - 1, input().split())  # 0 인덱스\n",
+    "        horses.append([r, c, dir])\n",
+    "        states[r][c].append(i)      # 말 배치\n",
+    "\n",
+    "    for turn in range(1, 1001):\n",
+    "        for cur_i in range(K):\n",
+    "            r, c, dir = horses[cur_i]\n",
+    "\n",
+    "            dr, dc = directions[dir]\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            in_range = 0 <= nr < N and 0 <= nc < N\n",
+    "\n",
+    "            if not in_range or board[nr][nc] == 2:  # 벗어나거나, 파란색(2)인 경우\n",
+    "\n",
+    "                dir = rev_dir[dir]      # 방향 전환\n",
+    "                horses[cur_i][2] = dir\n",
+    "\n",
+    "                dr, dc = directions[dir]\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "                in_range = 0 <= nr < N and 0 <= nc < N\n",
+    "\n",
+    "                if not in_range or board[nr][nc] == 2:   # 또 벽, 파란색인 경우 다음 말.\n",
+    "                    continue\n",
+    "\n",
+    "            # 이동 확정.\n",
+    "            cur_state = states[r][c]\n",
+    "            nxt_state = states[nr][nc]\n",
+    "\n",
+    "            idx = cur_state.index(cur_i)        # 해당 말의 위치\n",
+    "            moving_group = cur_state[idx:]      # 이동할 말 복사.\n",
+    "            del cur_state[idx:]                 # 이전 말 제거\n",
+    "\n",
+    "            for move_i in moving_group:         # 말 이동.\n",
+    "                horses[move_i][:2] = nr, nc\n",
+    "\n",
+    "            if board[nr][nc] == 1:          # 빨강이면 말 순서 뒤집기\n",
+    "                moving_group.reverse()\n",
+    "\n",
+    "            nxt_state.extend(moving_group)  # 다음칸에 말 쌓기.\n",
+    "\n",
+    "            if len(nxt_state) >= 4:\n",
+    "                return print(turn)          # 4개 이상 쌓이면 종료.\n",
+    "\n",
+    "    print(-1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -236,23 +345,63 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 1937 (욕심쟁이 판다) - https://www.acmicpc.net/problem/1937\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4\n",
+    "14 9 12 10\n",
+    "1 11 5 4\n",
+    "7 15 2 13\n",
+    "6 3 16 8''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    board = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "    directions = [(0, +1), (0, -1), (+1, 0), (-1, 0)]\n",
     "\n",
-    "    pass\n",
+    "    starts = sorted(  # 작은 수의 대나무 부터 조사.\n",
+    "        (board[r][c], r, c)\n",
+    "        for r, c in product(range(N), repeat=2)\n",
+    "    )\n",
+    "\n",
+    "    # dp[r][c] = 이 위치에 도달 할 수 있는 최대 길이\n",
+    "    dp = [[0] * N for _ in range(N)]\n",
+    "    answer = 0\n",
+    "\n",
+    "    for cur_bamboo, r, c in starts:\n",
+    "        max_len = 0\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            pr, pc = r + dr, c + dc\n",
+    "            if not 0 <= pr < N or not 0 <= pc < N:\n",
+    "                continue\n",
+    "\n",
+    "            # 현재 위치로 올 수 있는 이전 방향 거리들 조사\n",
+    "            if cur_bamboo > board[pr][pc]:\n",
+    "                max_len = max(max_len, dp[pr][pc])\n",
+    "\n",
+    "        dp[r][c] = max_len + 1  # 자신의 값 추가.\n",
+    "        answer = max(answer, max_len + 1)\n",
+    "\n",
+    "    print(answer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -260,23 +409,63 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5 4 8 16 17\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 13913 (숨바꼭질 4) - https://www.acmicpc.net/problem/13913\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 17''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, K = map(int, input().split())\n",
+    "    MAX = 100_000\n",
     "\n",
-    "    pass\n",
+    "    prev = [-1] * (MAX + 1)   # 방문 기능 함께 통합\n",
+    "\n",
+    "    dq = deque([N])\n",
+    "    prev[N] = N\n",
+    "\n",
+    "    while dq:\n",
+    "        cur = dq.popleft()\n",
+    "        if cur == K:\n",
+    "            break\n",
+    "\n",
+    "        for nxt in (cur + 1, cur - 1, cur*2):\n",
+    "            if not 0 <= nxt <= MAX or prev[nxt] != -1:\n",
+    "                continue\n",
+    "\n",
+    "            dq.append(nxt)\n",
+    "            prev[nxt] = cur\n",
+    "\n",
+    "    posi = K\n",
+    "    answer = []\n",
+    "\n",
+    "    while posi != N:\n",
+    "        answer.append(posi)\n",
+    "        posi = prev[posi]\n",
+    "\n",
+    "    answer.append(N)\n",
+    "    answer.reverse()\n",
+    "\n",
+    "    print(len(answer) - 1)\n",
+    "    print(*answer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -284,23 +473,103 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 12100 (2048 (Easy)) - https://www.acmicpc.net/problem/12100\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "2 2 2\n",
+    "4 4 4\n",
+    "8 8 8''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "    max_val = max(map(max, board))\n",
     "\n",
-    "    pass\n",
+    "    def compress_merge(one_line):\n",
+    "        nonlocal max_val\n",
+    "\n",
+    "        arr = [x for x in one_line if x != 0]  # 0 제거 후 복사\n",
+    "        merged = list()\n",
+    "        base_idx = 0\n",
+    "\n",
+    "        while base_idx < len(arr):\n",
+    "            base = arr[base_idx]\n",
+    "            target = base_idx + 1\n",
+    "\n",
+    "            if target < len(arr) and base == arr[target]:\n",
+    "                max_val = max(max_val, base * 2)\n",
+    "                merged.append(base * 2)\n",
+    "                base_idx += 2\n",
+    "            else:\n",
+    "                merged.append(arr[base_idx])\n",
+    "                base_idx += 1\n",
+    "\n",
+    "        merged.extend([0] * (N - len(merged)))\n",
+    "        return merged\n",
+    "\n",
+    "    def can_move(dir):\n",
+    "        is_moved = False            # 이동이 일어났는지 체크\n",
+    "\n",
+    "        if dir == 0 or dir == 1:    # dir, 0좌, 1우, 2위, 3아래\n",
+    "            for r in range(N):      # 우측이면 반전\n",
+    "\n",
+    "                line = board[r][::-1] if dir == 1 else board[r]\n",
+    "                new_line = compress_merge(line)\n",
+    "                if not is_moved:    # 이동 여부\n",
+    "                    is_moved = line != new_line\n",
+    "\n",
+    "                if dir == 1:\n",
+    "                    new_line.reverse()\n",
+    "                board[r][:] = new_line\n",
+    "\n",
+    "        else:\n",
+    "            for c in range(N):      # 아래면 반전\n",
+    "                line = [board[r][c] for r in range(N)]\n",
+    "                if dir == 3:\n",
+    "                    line.reverse()\n",
+    "\n",
+    "                new_line = compress_merge(line)\n",
+    "                if not is_moved:\n",
+    "                    is_moved = line != new_line\n",
+    "                if dir == 3:\n",
+    "                    new_line.reverse()\n",
+    "                for r in range(N):\n",
+    "                    board[r][c] = new_line[r]\n",
+    "\n",
+    "        return is_moved\n",
+    "\n",
+    "    def dfs(trying_cnt):\n",
+    "\n",
+    "        if trying_cnt > 5:\n",
+    "            return\n",
+    "\n",
+    "        snapshot = [row[:] for row in board]    # 현재 상태 저장\n",
+    "        for dir in range(4):\n",
+    "            if can_move(dir):\n",
+    "                dfs(trying_cnt + 1)\n",
+    "            for r in range(N):                  # 보드 복원\n",
+    "                board[r][:] = snapshot[r]\n",
+    "\n",
+    "    dfs(1)\n",
+    "    print(max_val)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -309,7 +578,32 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.5): 상품을 구매한 회원 비율 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131534\n",
+    "-- 5. SQL(Lv.5): 상품을 구매한 회원 비율 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131534\n",
+    "WITH \n",
+    "    JOIN_21 AS (\n",
+    "        SELECT\n",
+    "            USER_ID,\n",
+    "            COUNT(*) OVER() AS TOTAL_USERS\n",
+    "        FROM \n",
+    "            USER_INFO \n",
+    "        WHERE\n",
+    "            YEAR(JOINED) = 2021\n",
+    "    )\n",
+    "SELECT\n",
+    "    YEAR(SALES_DATE) AS `YEAR`,\n",
+    "    MONTH(SALES_DATE) AS `MONTH`,\n",
+    "    COUNT(DISTINCT USER_ID) AS `PURCHASED_USERS`,\n",
+    "    ROUND(\n",
+    "        COUNT(DISTINCT USER_ID) / TOTAL_USERS, \n",
+    "        1\n",
+    "    ) AS `PUCHASED_RATIO`\n",
+    "FROM JOIN_21\n",
+    "JOIN ONLINE_SALE USING(USER_ID)\n",
+    "GROUP BY\n",
+    "    YEAR, MONTH\n",
+    "ORDER BY\n",
+    "    YEAR ASC, MONTH ASC;\n",
     "```"
    ]
   }
