--- a/A03_SOMA_CODINGTEST/B_21_25/C21_D-10_260225.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C21_D-10_260225.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 2493 (탑) - https://www.acmicpc.net/problem/2493\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 1011 (Fly me to the Alpha Centauri) - https://www.acmicpc.net/problem/1011\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 1253 (좋다) - https://www.acmicpc.net/problem/1253\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 1715 (카드 정렬하기) - https://www.acmicpc.net/problem/1715\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +102,8 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 노선별 평균 역 사이 거리 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/284531\n",
     "```"
    ]
   },
@@ -113,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 21610 (마법사 상어와 비바라기) - https://www.acmicpc.net/problem/21610\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 15486 (퇴사 2) - https://www.acmicpc.net/problem/15486\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 1753 (최단경로) - https://www.acmicpc.net/problem/1753\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 16987 (계란으로 계란치기) - https://www.acmicpc.net/problem/16987\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,7 +209,8 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.3): 조건에 맞는 사용자 정보 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/164670\n",
     "```"
    ]
   }
