--- a/A03_SOMA_CODINGTEST/B_21_25/C21_D-10_260225.ipynb
+++ b/A03_SOMA_CODINGTEST/B_21_25/C21_D-10_260225.ipynb
@@ -2,26 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 2 2 4\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 2493 (탑) - https://www.acmicpc.net/problem/2493\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "6 9 5 7 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    heights = list(map(int, input().split()))\n",
     "\n",
-    "    pass\n",
+    "    stack = list()\n",
+    "    answer = [0] * N\n",
+    "\n",
+    "    for i, cur_h in enumerate(heights):\n",
+    "\n",
+    "        while stack and stack[-1][0] < cur_h:  # 단조스택, 내림차순유지\n",
+    "            stack.pop()\n",
+    "\n",
+    "        answer[i] = stack[-1][1] if stack else 0\n",
+    "        stack.append((cur_h, i + 1))        # 인덱스 소절\n",
+    "\n",
+    "    print(*answer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,23 +51,55 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 1011 (Fly me to the Alpha Centauri) - https://www.acmicpc.net/problem/1011\n",
     "import sys\n",
+    "from math import isqrt\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "0 3\n",
+    "1 5\n",
+    "45 50''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    x, y = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    distance = y - x\n",
+    "    n = isqrt(distance)  # n: 도달 가능한 최대 속도\n",
+    "\n",
+    "    base = n * n         # base: 최대 속도 n을 찍었을 때의 기본 이동 거리 (n^2)\n",
+    "\n",
+    "    # 패턴 1: 완벽한 대칭 피라미드 (예: 1, 2, 1)\n",
+    "    if distance == base:\n",
+    "        return print(2*n - 1)\n",
+    "\n",
+    "    # 패턴 2: 거리가 살짝 남아 이동 횟수 1번 추가\n",
+    "    if base < distance <= base + n:\n",
+    "        return print(2*n)\n",
+    "\n",
+    "    # 패턴 3: 거리가 많이 남아 이동 횟수 2번 추가\n",
+    "    if base + n < distance < (n+1)**2:\n",
+    "        return print(2*n + 1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
@@ -53,23 +107,59 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 1253 (좋다) - https://www.acmicpc.net/problem/1253\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10\n",
+    "1 2 3 4 5 6 7 8 9 10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    nums = sorted(map(int, input().split()))\n",
     "\n",
-    "    pass\n",
+    "    good_cnt = 0\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        base = nums[i]\n",
+    "        left, right = 0, N - 1\n",
+    "\n",
+    "        while left < right:\n",
+    "            if left == i:\n",
+    "                left += 1\n",
+    "                continue\n",
+    "\n",
+    "            if right == i:\n",
+    "                right -= 1\n",
+    "                continue\n",
+    "\n",
+    "            target = nums[left] + nums[right]\n",
+    "            if target == base:\n",
+    "                good_cnt += 1\n",
+    "                break\n",
+    "\n",
+    "            elif target > base:\n",
+    "                right -= 1\n",
+    "            else:\n",
+    "                left += 1\n",
+    "\n",
+    "    print(good_cnt)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -77,23 +167,44 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 1715 (카드 정렬하기) - https://www.acmicpc.net/problem/1715\n",
     "import sys\n",
+    "from heapq import heappop, heappush, heapify\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "10\n",
+    "20\n",
+    "40''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    nums = [int(input()) for _ in range(N)]\n",
+    "    heapify(nums)\n",
     "\n",
+    "    cnt_sum = 0\n",
+    "    while len(nums) >= 2:\n",
+    "        two_sum = heappop(nums) + heappop(nums)\n",
+    "        cnt_sum += two_sum\n",
+    "        heappush(nums, two_sum)\n",
     "\n",
-    "solve()\n"
+    "    print(cnt_sum)\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -104,31 +215,96 @@
     "```sql\n",
     "-- 5. SQL(Lv.2): 노선별 평균 역 사이 거리 조회하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/284531\n",
+    "SELECT \n",
+    "    ROUTE,\n",
+    "    CONCAT(ROUND(SUM(D_BETWEEN_DIST), 1), 'km') AS TOTAL_DISTANCE,\n",
+    "    CONCAT(ROUND(AVG(D_BETWEEN_DIST), 2), 'km') AS AVERAGE_DISTANCE\n",
+    "FROM\n",
+    "    SUBWAY_DISTANCE\n",
+    "GROUP BY\n",
+    "    ROUTE\n",
+    "ORDER BY\n",
+    "    SUM(D_BETWEEN_DIST) DESC;\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 21610 (마법사 상어와 비바라기) - https://www.acmicpc.net/problem/21610\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 4\n",
+    "0 0 1 0 2\n",
+    "2 3 2 1 0\n",
+    "4 3 2 9 0\n",
+    "1 0 2 9 0\n",
+    "8 8 2 1 0\n",
+    "1 3\n",
+    "3 4\n",
+    "8 1\n",
+    "4 8''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "    directions = [\n",
+    "        (0, -1), (-1, -1), (-1, 0), (-1, +1),\n",
+    "        (0, +1), (+1, +1), (+1, 0), (+1, -1)\n",
+    "    ]\n",
     "\n",
-    "    pass\n",
+    "    clouds = set([\n",
+    "        (N-1, 0), (N-1, 1),\n",
+    "        (N-2, 0), (N-2, 1)\n",
+    "    ])\n",
+    "\n",
+    "    for _ in range(M):\n",
+    "        d, s = map(int, input().split())\n",
+    "        dr, dc = directions[d-1]\n",
+    "\n",
+    "        add_water = set()\n",
+    "        for cr, cc in clouds:\n",
+    "            nr, nc = (cr + dr*s) % N, (cc + dc*s) % N\n",
+    "            board[nr][nc] += 1\n",
+    "            add_water.add((nr, nc))\n",
+    "\n",
+    "        clouds.clear()\n",
+    "\n",
+    "        for wr, wc in add_water:\n",
+    "            for i in range(0, 8, 2):\n",
+    "                dr, dc = directions[i+1]\n",
+    "                nr, nc = wr + dr, wc + dc\n",
+    "                in_range = 0 <= nr < N and 0 <= nc < N\n",
+    "\n",
+    "                if in_range and board[nr][nc] != 0:\n",
+    "                    board[wr][wc] += 1\n",
+    "\n",
+    "        for r, c in product(range(N), repeat=2):\n",
+    "            if (r, c) not in add_water and board[r][c] >= 2:\n",
+    "                clouds.add((r, c))\n",
+    "                board[r][c] -= 2\n",
+    "\n",
+    "    print(sum(map(sum, board)))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -136,23 +312,54 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 15486 (퇴사 2) - https://www.acmicpc.net/problem/15486\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10\n",
+    "5 50\n",
+    "4 40\n",
+    "3 30\n",
+    "2 20\n",
+    "1 10\n",
+    "1 10\n",
+    "2 20\n",
+    "3 30\n",
+    "4 40\n",
+    "5 50''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    plans = [tuple(map(int, input().split())) for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    dp = [0] * (N + 1)  # dp[i] = i 일까지 얻을 수 있는 최대 수익\n",
+    "    for i in range(N):\n",
+    "        day, profit = plans[i]\n",
+    "\n",
+    "        dp[i + 1] = max(dp[i + 1], dp[i])   # 상담 건너뛰기\n",
+    "\n",
+    "        due_day = i + day\n",
+    "\n",
+    "        if due_day <= N:    # 상담 끝나는 날 벌 수익보다 크면 갱신\n",
+    "            dp[due_day] = max(dp[due_day], dp[i] + profit) # Forward DP\n",
+    "\n",
+    "    print(dp[N])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -160,47 +367,153 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "3\n",
+      "7\n",
+      "INF\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 1753 (최단경로) - https://www.acmicpc.net/problem/1753\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 6\n",
+    "1\n",
+    "5 1 1\n",
+    "1 2 2\n",
+    "1 3 3\n",
+    "2 3 4\n",
+    "2 4 5\n",
+    "3 4 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    V, E = map(int, input().split())\n",
+    "    S = int(input()) - 1\n",
+    "    graph = [[] for _ in range(V)]\n",
+    "\n",
+    "    for _ in range(E):\n",
+    "        u, v, w = map(int, input().split())\n",
+    "        graph[u-1].append((v-1, w))  # 0 index\n",
+    "\n",
+    "    pq = [(0, S)]  # 거리\n",
+    "    min_dist = [float('inf')] * V\n",
+    "    min_dist[S] = 0\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_dist, cur = heappop(pq)\n",
+    "\n",
+    "        if cur_dist > min_dist[cur]:\n",
+    "            continue\n",
+    "\n",
+    "        for nxt, cost in graph[cur]:\n",
+    "            nxt_dist = cur_dist + cost\n",
+    "\n",
+    "            if nxt_dist >= min_dist[nxt]:\n",
+    "                continue\n",
+    "\n",
+    "            min_dist[nxt] = nxt_dist\n",
+    "            heappush(pq, (nxt_dist, nxt))\n",
+    "\n",
+    "    print(\"\\n\".join(\n",
+    "        'INF' if dist == float('inf') else str(dist)\n",
+    "        for dist in min_dist\n",
+    "    ))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 16987 (계란으로 계란치기) - https://www.acmicpc.net/problem/16987\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''8\n",
+    "222 117\n",
+    "176 92\n",
+    "287 6\n",
+    "284 81\n",
+    "221 96\n",
+    "263 96\n",
+    "188 40\n",
+    "225 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    eggs = [list(map(int, input().split())) for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    max_broken = 0\n",
+    "\n",
+    "    def dfs(hand_idx):  # 손에 들 계란 인덱스\n",
+    "        nonlocal max_broken\n",
+    "\n",
+    "        if hand_idx == N:   # 끝까지 고려 한 뒤.\n",
+    "            cur_broken = sum(s <= 0 for s, _ in eggs)\n",
+    "            max_broken = max(max_broken, cur_broken)\n",
+    "            return\n",
+    "\n",
+    "        if eggs[hand_idx][0] <= 0:  # 손에 들 계란이 깨진계란\n",
+    "            dfs(hand_idx + 1)\n",
+    "            return\n",
+    "\n",
+    "        for target in range(N):     # 칠 계란이 있는지 조사.\n",
+    "            if target != hand_idx and eggs[target][0] > 0:\n",
+    "                break               # 칠 계란 하나라도 남아있으면 탈출\n",
+    "        else:\n",
+    "            dfs(hand_idx + 1)       # 다 깨졌으면 hand_idx == N 까지 보냄\n",
+    "            return\n",
+    "\n",
+    "        for target in range(N):\n",
+    "            if target == hand_idx or eggs[target][0] <= 0:\n",
+    "                continue    # 깨졌거나, 자기 자신 인덱스는 통과\n",
+    "\n",
+    "            hand_egg = eggs[hand_idx]\n",
+    "            target_egg = eggs[target]\n",
+    "\n",
+    "            hand_egg[0] -= target_egg[1]\n",
+    "            target_egg[0] -= hand_egg[1]\n",
+    "\n",
+    "            dfs(hand_idx + 1)\n",
+    "\n",
+    "            hand_egg[0] += target_egg[1]\n",
+    "            target_egg[0] += hand_egg[1]\n",
+    "\n",
+    "    dfs(0)\n",
+    "\n",
+    "    print(max_broken)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -211,13 +524,54 @@
     "```sql\n",
     "-- 5. SQL(Lv.3): 조건에 맞는 사용자 정보 조회하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/164670\n",
+    "WITH U AS (\n",
+    "        SELECT\n",
+    "            WRITER_ID AS USER_ID\n",
+    "        FROM \n",
+    "            USED_GOODS_BOARD\n",
+    "        GROUP BY\n",
+    "            WRITER_ID\n",
+    "        HAVING\n",
+    "            COUNT(*) >= 3\n",
+    "    )\n",
+    "SELECT\n",
+    "    USER_ID,\n",
+    "    NICKNAME,\n",
+    "    CONCAT(\n",
+    "        CITY, ' ', \n",
+    "        STREET_ADDRESS1, ' ', \n",
+    "        STREET_ADDRESS2\n",
+    "    ) AS `전체주소`,\n",
+    "    CONCAT(\n",
+    "        SUBSTR(TLNO,1,3), '-', \n",
+    "        SUBSTR(TLNO, 4, 4), '-', \n",
+    "        SUBSTR(TLNO,8,4)\n",
+    "    )   AS `전화번호`\n",
+    "FROM U\n",
+    "JOIN USED_GOODS_USER USING (USER_ID)\n",
+    "ORDER BY \n",
+    "    USER_ID DESC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
